apps/architecture-portal/versioned_docs/version-1.0.59.0/overview/index.mdx
---
id: index
slug: /
title: LMDJ Docs
area: overview
status: partial
owners: [product, core]
source_paths:
  - products/lmdj/assembly.lock.json
  - docs/design/2026-08-07-lmdj-stage7-creator-editor-design.md
  - docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md
  - docs/prd/decision-log.md
  - docs/design/2026-07-30-lmdj-playable-beat-instrument-core-redesign.md
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {SectionCards} from '@site/src/components/SectionCards';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity />

这里是 LMDJ 文档站，项目源码位于 `apps/docs-site/`，统一承载产品说明、
架构与开发文档，并为未来发布 Changelog 留出位置。当前尚未启用 Changelog 功能。
历史版本快照保持原始内容和来源证明，现有访问地址与文档路由不变。

LMDJ 的产品方向是 **64-Pad Playable Beat Instrument**。当前源码支持 Project workspace、Sample 编辑与 Capture、Sound Set、Sequence 录音，以及显式 Slice 分析、候选试听和目标 Pad 采纳。Creator 与 Runtime Host 共享受 Assembly 约束的 Runtime；生产/云 Provider、离线安装和物理设备验收仍按各自门禁推进。当前 Product 身份见上方 Build Identity，实际组合见 Assembly 清单。

:::info[构建身份]
上方 Build Identity 会明确标出本页属于随 `main` 演进的 current 说明书，还是某个 Product Build 的不可变正式快照；版本下拉菜单用于在两类证据之间切换。
:::

## 全产品架构

<DiagramFrame title="LMDJ 全产品架构" diagramId="lmdj-product" />

Project Truth 是权威创作状态；Runtime Snapshot 是不可变派生状态；Host 只通过 Application Facade 使用 Core；Provider 只接收 Artifact 输入和输出 sink；产品专属装配只存在于 Product Assembly。

## 导览

<SectionCards items={[
  {title: '产品', description: '定位、能力边界与核心工作流。', docId: 'product/positioning', status: 'partial'},
  {title: 'Core Modules', description: '产品中立模块及其依赖。', docId: 'core/modules/foundation', status: 'implemented'},
  {title: 'Hosts', description: 'CLI、MCP、Native、Diagnostic Web 与 Creator Web。', docId: 'hosts/overview', status: 'partial'},
  {title: 'Providers', description: '能力发现、Attempt 与 Proof Provider。', docId: 'providers/overview', status: 'partial'},
  {title: 'Contracts', description: '跨语言边界和不可变运行态。', docId: 'contracts/overview', status: 'implemented'},
  {title: 'Assembly', description: 'LMDJ 产品组合与版本身份。', docId: 'assembly/lmdj', status: 'implemented'},
  {title: 'Platform', description: '音频、Web、存储和输入适配。', docId: 'platform/native-audio', status: 'partial'},
  {title: 'Operations', description: 'Proof、版本发布与文档治理。', docId: 'operations/testing-and-proof', status: 'implemented'},
  {title: 'History', description: '已退役架构，仅供迁移追溯。', docId: 'history/legacy-patch-architecture', status: 'retired'},
]} />

## 当前交付状态

- **已实现**：Core Modules、Assembly-listed Hosts、本地参考 Providers 与 active Contracts 的当前清单见各分类页及 [Assembly](../assembly/lmdj.mdx)。Creator 覆盖 Project workspace、portable import、Sample Editor、Pad Capture、Sound Set、Sequence 录音、Slice 候选试听/显式采纳、64 Pad Runtime surface 和共享 Runtime 壳。
- **部分实现**：原生音频与 Web 物理设备体验；Web Runtime Lab 仍是独立实验工具，不是正式 Host。
- **已设计/规划中**：通用 Sequence event editor/Undo、素材智能、生产/云 Provider、离线安装与正式部署。
- **已退役**：旧 Patch/Materials 架构只保留在 History，active source 不得依赖。

## 文档与证据规则

页面状态必须由 `source_paths`、测试或已批准决策支持。Product Build、Module/Host/Provider/Contract 版本和 Git revision 均从仓库清单生成，作者不手填。
